--- a/client/EB_media/src/components/LogoSearch/LogoSearch.css
+++ b/client/EB_media/src/components/LogoSearch/LogoSearch.css
@@ -1,5 +1,27 @@
 .logo{
     height: 30px;
     width: 30px;
-    
+}
+.Search{
+    display: flex;
+    background-color: var(--inputColor);
+    border-radius: 10px;
+    padding: 5px;
+
+}
+.LogoSearch{
+    display: flex;
+    gap: 0.75rem;
+}
+.s-icon{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: linear-gradient(106.23deg,#f998);
+    border-radius: 5px;
+    padding: 4px;
+    color: white;
+}
+.s-icon:hover{
+    cursor: pointer;
 }
