--- a/client/EB_media/src/components/ProfileCard.css
+++ b/client/EB_media/src/components/ProfileCard.css
@@ -4,6 +4,8 @@
     flex-direction: column;
     position: relative;
     gap: 1rem;
+    overflow-x: clip;
+    background: var(--cardColor);
 }
 .profileImages{
     position: relative;
@@ -18,6 +20,7 @@
 .profileImages>img:nth-of-type(1){
     width:100%;
     height: 80%;
+
 }
 .profileImages>img:nth-of-type(2){
     width: 6rem;
@@ -31,7 +34,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 3rem;
+    margin-top: 0.2rem;
     gap: 10px;
 }
 .ProfileName>span:nth-of-type(1){
@@ -69,4 +72,16 @@ font-weight: bold;
 .follow >span:nth-of-type(2){
     color: var(--gray);
     font-size: 12px ;
+
+}
+.vl{
+    height: 150%;
+    border-left: 2px solid var(--hrColor);
+}
+.ProfileCard>span{
+    font-weight: bold;
+    color: orange;
+    align-self:center ;
+    margin-bottom: 1rem;
+    cursor: pointer;
 }
