--- a/client/EB_media/src/App.css
+++ b/client/EB_media/src/App.css
@@ -27,3 +27,13 @@
   background: #a6ddf0;
   filter: blur(72px);
 }
+gbutton{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  border: none;
+  border-radius: 0.5rem;
+  background: var(--buttonBg);
+  transition: all 100ms ease-out;
+}
