the end of followersCard

--- a/client/EB_media/src/App.css
+++ b/client/EB_media/src/App.css
@@ -27,7 +27,7 @@
   background: #a6ddf0;
   filter: blur(72px);
 }
-gbutton{
+.button{
   display: flex;
   align-items: center;
   justify-content: center;
@@ -36,4 +36,10 @@ gbutton{
   border-radius: 0.5rem;
   background: var(--buttonBg);
   transition: all 100ms ease-out;
+}
+.button:hover{
+  cursor: pointer;
+  color: var(--orange);
+  background:transparent ;
+  border: 2px solid var(--orange);
 }
