--- a/client/EB_media/src/components/postShare/PostShare.css
+++ b/client/EB_media/src/components/postShare/PostShare.css
@@ -36,3 +36,13 @@
     display: flex;
     align-items: center;
 }
+.options:hover{
+    cursor: pointer;
+}
+.ps-button{
+    padding: 5px;
+    padding-left: 20px;
+    padding-right: 20px;
+    font-size: 12px;
+
+}
