--- a/client/EB_media/src/components/postShare/PostShare.css
+++ b/client/EB_media/src/components/postShare/PostShare.css
@@ -46,3 +46,20 @@
     font-size: 12px;
 
 }
+.previewImage{
+    position: absolute;
+    top: 8rem;
+}
+.previewImage>svg{
+    position: absolute;
+    right: 1rem;
+    top: 0.5rem;
+    cursor:pointer;
+}
+.previewImage>img{
+    width: 100%;
+    max-height: 20rem;
+    object-fit: cover;
+    border-radius: 0.5rem;
+
+}
