adding postData and adding data

--- a/client/EB_media/src/components/postShare/PostShare.css
+++ b/client/EB_media/src/components/postShare/PostShare.css
@@ -57,7 +57,7 @@
     cursor:pointer;
 }
 .previewImage>img{
-    width: 100%;
+    width: 600px;
     max-height: 20rem;
     object-fit: cover;
     border-radius: 0.5rem;
