--- a/client/EB_media/src/components/post/Post.css
+++ b/client/EB_media/src/components/post/Post.css
@@ -2,3 +2,23 @@
     height: 40px;
     width: 40px;
 }
+
+.Post{
+    display: flex;
+    flex-direction: column;
+    padding: 1rem;
+    background-color: var(--cardColor);
+    border-radius: 1rem;
+    gap: 1rem;
+}
+.post>img{
+    width: 100%;
+    max-height: 10rem;
+    object-fit: cover;
+    border-radius: 0.5rem;
+}
+.postReact{
+    display: flex;
+    align-items: flex-start;
+    gap: 1.5rem;
+}
