--- a/client/EB_media/src/components/RightSide/RightSide.css
+++ b/client/EB_media/src/components/RightSide/RightSide.css
@@ -14,3 +14,12 @@
 .navIcons>img{
     width: 1.5rem;
 }
+.navIcons>img{
+    width: 1.5rem;
+    height: 1.5rem;
+} 
+.r-button{
+    height: 3rem;
+    width: 80%;
+    align-items: center;
+}
