--- a/client/EB_media/src/components/infoCard/InfoCard.css
+++ b/client/EB_media/src/components/infoCard/InfoCard.css
@@ -12,3 +12,12 @@
     justify-content: space-between;
     align-items: center;
 }
+.infoHead>div:hover{
+    cursor: pointer;
+}
+.logout-button{
+    width: 7rem;
+    height: 2rem;
+    margin-top: 6rem;
+    align-self: flex-end;
+}
