--- a/client/EB_media/src/components/ProfileCard.css
+++ b/client/EB_media/src/components/ProfileCard.css
@@ -19,7 +19,7 @@
 }
 .profileImages>img:nth-of-type(1){
     width:100%;
-    height: 80%;
+    /* height: 80%; */
 
 }
 .profileImages>img:nth-of-type(2){
@@ -30,17 +30,22 @@
     bottom: -0.3rem;
     box-shadow: var(--profileShadow);
 }
+.photo{
+    height: 200px;
+}
 .ProfileName{
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 0.2rem;
+    /* margin-top: 0.2rem; */
     gap: 10px;
 }
 .ProfileName>span:nth-of-type(1){
     font-weight: bold;
+    margin-top: 40px;
 }
 .followStatus{
+    margin-top: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
