--- a/client/EB_media/src/pages/profile/Profile.css
+++ b/client/EB_media/src/pages/profile/Profile.css
@@ -1,6 +1,6 @@
 .Profile{
     position: relative;
-    display: flex;
+    display: grid;
     grid-template-columns: 18rem auto 20rem;
     gap: 1rem;
 }
