--- a/client/EB_media/src/App.css
+++ b/client/EB_media/src/App.css
@@ -1,3 +1,4 @@
+
 :root {
   --yellow:#f5c32c;
   --orange:#fca61f;
@@ -42,6 +43,10 @@
   color: var(--orange);
   background:transparent ;
   border: 2px solid var(--orange);
+}
+.button:disabled{
+  background: silver;
+  pointer-events: none;
 }
 ::-webkit-scrollbar{
   display: none;
